remove warning in test execution https://stackoverflow.com/questions/60915381/retrofit2-maven-project-illegal-reflective-access-warning